Fixed Alignments

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -77,7 +77,7 @@ header {
 }
 
 main {
-  padding: 10vh 10vw;
+  padding: 10vh 10vw 2rem 10vw;
   //   height: 100%;
   min-height: calc(100vh - 60px);
 
